MTR-1 get all the words for a given locale; moved to Google JS style guide

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
         },
         "sourceType": "module"
     },
-    "extends": "airbnb",
+    "extends": "google",
     "rules": {
         "no-const-assign": "warn",
         "no-this-before-super": "warn",
