--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/microlib/microtranslator-nodejs#readme",
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint": "^4.0.0",
+    "eslint-config-google": "^0.8.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
