--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "mocha": "^3.4.1"
+    "mocha": "^3.4.1",
+    "proxyquire": "^1.8.0"
   },
   "dependencies": {
     "asyncawait": "^1.0.6",
